worked on landing page feature

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <body>
     <section class="landingPage" id="landingPage">
       <h1>Poetry Trivia</h1>
-      <ul>
+      <ul class="modeContainer">
         <li class="easyMode modes">
           <h2>Easy Mode</h2>
-          <p>
+          <p hidden>
             In easy mode, simply match the poet to the poem title by selecting
             one of the options provided.
           </p>
         </li>
         <li class="hardMode modes">
           <h2>Hard Mode</h2>
-          <p>
+          <p hidden>
             In hard mode, type in the poet name that corresponds with the poem
             title displayed.
           </p>
         </li>
       </ul>
-      <a class="button" href="#">Start</a>
+      <a class="button start" href="#">Start</a>
     </section>
 
     <section class="easyGame">
