added functionality for landingPage

--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
     <section class="landingPage" id="landingPage">
       <h1>Poetry Trivia</h1>
       <ul class="modeContainer">
-        <li class="easyMode modes">
+        <li class="easyMode modes" id="easy">
           <h2>Easy Mode</h2>
           <p hidden>
             In easy mode, simply match the poet to the poem title by selecting
             one of the options provided.
           </p>
         </li>
-        <li class="hardMode modes">
+        <li class="hardMode modes" id="hard">
           <h2>Hard Mode</h2>
           <p hidden>
             In hard mode, type in the poet name that corresponds with the poem
             title displayed.
           </p>
         </li>
+
       </ul>
-      <a class="button start" href="#">Start</a>
+      <a class="button start">Start</a>
     </section>
 
-    <section class="easyGame">
+    <section class="easyGame" id="easyGame">
       <h2>Poetry Trivia</h2>
       <div class="titleContainer">
-        <p></p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt iusto exercitationem excepturi itaque numquam, quae, praesentium ipsam maxime totam corrupti iure dolores sit officiis accusamus recusandae nihil architecto doloribus vel eum earum nulla officia! Asperiores aliquam illo maiores libero deleniti cum impedit quo veniam pariatur. Dolorem cumque voluptate aliquid ea voluptatibus at quaerat neque alias a harum molestiae explicabo quam voluptas, aspernatur vel perferendis expedita? Doloribus, non. Deleniti saepe quod, velit amet blanditiis cum, eum reiciendis labore veritatis facilis accusamus placeat ipsum? Modi dolorum expedita alias atque omnis, explicabo voluptatem laborum illum rerum, quidem voluptas repudiandae tempora necessitatibus ab esse dolores assumenda eaque deleniti harum. Praesentium nostrum vel ad debitis, ipsum, quam expedita iusto delectus suscipit quae velit, eligendi sit! Officia neque tempora excepturi aliquam. Recusandae nulla quidem praesentium dolores dicta, quam enim voluptatibus fugit repellendus culpa voluptate natus deserunt sed ipsam, laudantium at sequi corporis cupiditate voluptatem. Fugit officiis nobis culpa voluptatibus quo nam quidem distinctio maiores id, ad repellendus aliquam aspernatur illo asperiores quos tenetur officia? Soluta vero asperiores ullam ipsa repudiandae, quod, totam temporibus quia eaque voluptas dolores modi fuga et. Aliquam obcaecati tempore molestiae magnam inventore maxime quia optio, placeat omnis laudantium, corrupti ipsum sint molestias hic pariatur veniam illo culpa fuga voluptates sed harum facilis maiores nam? Culpa, magnam vero ipsum, esse corrupti perferendis vel quidem tempore labore neque perspiciatis dolorem id laborum, repudiandae quae nesciunt aliquam. Qui consequuntur ipsum at architecto eos itaque distinctio ab reprehenderit quasi quisquam quas ipsam rem atque ducimus animi corporis ex enim voluptatem, alias in asperiores. Ab, alias totam porro voluptates impedit est neque perferendis vel eos blanditiis, deleniti, reprehenderit animi? Eum ex sed quae totam laborum doloribus impedit at, dicta, cumque architecto distinctio tempore adipisci similique magni placeat ab perferendis nemo corrupti laboriosam nihil quidem possimus ut? Facilis fugit aut placeat nemo nesciunt, error quis repudiandae aspernatur earum id quae magnam similique maiores voluptatibus eius, illum alias aliquam quibusdam nulla sed delectus repellendus ipsam quas. Corporis laudantium dolorum quam deserunt quasi repudiandae fuga nulla nobis commodi adipisci necessitatibus ullam odit delectus natus nihil error, repellendus quae rerum aliquam consectetur? Voluptatibus id corporis sequi odit unde. Voluptatibus minima doloribus sit odio quis vero sapiente nisi minus omnis aspernatur sunt, officiis molestiae quod, quibusdam ab quasi voluptatum reiciendis, iste dolore enim numquam! Dolorum nulla tempora iusto optio corporis, ducimus cupiditate in qui architecto omnis, minus ex. Velit, consequatur eius amet quibusdam, cumque quo porro iste blanditiis quis soluta provident architecto molestias maiores numquam veritatis, dicta temporibus dolores dignissimos voluptates mollitia asperiores ex natus consectetur minus. Autem tenetur ut, ex rerum, iusto nulla reiciendis, inventore nostrum nam quos temporibus illum quasi nemo consequatur praesentium et veritatis eligendi reprehenderit! Aut quo ducimus in ipsa, incidunt, sapiente consectetur fugiat laboriosam voluptatum reprehenderit quibusdam expedita impedit minus dolore, voluptates pariatur optio animi eius molestias quia est non distinctio itaque? Ab possimus numquam velit nemo ut officiis error, ipsum atque quibusdam quas laborum quia in dolores ad impedit odio non temporibus. Obcaecati, nam! Esse, placeat.</p>
       </div>
       <ul>
         <li class="options"></li>
@@ -46,10 +47,10 @@
       </div>
     </section>
 
-    <section class="hardGame">
+    <section class="hardGame" id="hardGame">
       <h2>Poetry Trivia</h2>
       <div class="titleContainer">
-        <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae minus corporis suscipit pariatur quia quod aut et laboriosam unde! Distinctio mollitia veniam corrupti dolores nesciunt eos a ipsam dolor impedit, modi quidem deserunt incidunt voluptatibus voluptates consectetur eius esse possimus ex minima amet sed itaque. Odit blanditiis sequi eveniet magnam sit fugiat ducimus, fugit harum nisi, voluptates illum eligendi, totam quae veritatis amet saepe id. Quaerat officia maiores saepe aliquid assumenda, tempora libero animi excepturi sunt recusandae, optio error deleniti beatae repellendus quo dolorum explicabo temporibus veritatis vero expedita rem! Quis temporibus ullam aspernatur magnam aliquam, similique sit minima dignissimos harum tempora ea incidunt reiciendis dolores libero eius, enim, architecto culpa dolor necessitatibus nemo natus debitis omnis rem molestias. Adipisci dignissimos perferendis quaerat rerum sint quos expedita nulla. Repellendus tenetur tempore in reiciendis voluptatibus voluptas natus repellat sit vitae mollitia ratione adipisci, esse aut eius excepturi quisquam? Ad quisquam, tempore voluptatum asperiores accusantium velit veritatis, modi illo itaque nulla cumque laudantium facere possimus natus. Laboriosam voluptas dolore quae enim. Ipsa, laboriosam quas? Officiis culpa tempora nemo vero deserunt sapiente similique soluta dolor enim quibusdam eum quod, dolorem molestias quis. Sit nisi vel aperiam, dolor fugiat aliquid dolorem! Pariatur ullam eos doloribus, saepe magnam tenetur minima laudantium, dicta ut, hic rem numquam exercitationem amet ex accusantium culpa fuga delectus necessitatibus id dolor in suscipit placeat officia quo. Laudantium, ducimus laborum. Eveniet, unde. Officia error iste delectus earum modi. Maiores quaerat expedita minus ducimus amet ab odit quos magni blanditiis quas iste excepturi dolor tempore natus enim, mollitia asperiores quis, necessitatibus repudiandae cupiditate fugiat corrupti. Corporis officia accusamus suscipit harum! Velit, itaque! Optio vel itaque reiciendis recusandae, voluptatem laboriosam tempore odio dignissimos! Cupiditate deserunt impedit dolor eaque porro tenetur et id sapiente, nisi natus molestiae neque dolorem fuga ab aliquid odio autem! Illum suscipit quod ab eveniet enim minus odit sequi fuga et sed, voluptatum ut est accusamus natus doloribus cum maxime dolorem ex? Error dolore illum corporis laudantium magnam fugiat tempora aspernatur facere eos corrupti. Facere porro libero perferendis praesentium ab perspiciatis nisi odio aut labore corrupti, obcaecati omnis fuga earum rerum ipsa aperiam nam repellendus voluptates? Odio, eligendi hic velit ducimus delectus aut atque vel beatae explicabo. Obcaecati velit nam voluptatem! Ipsam cum, veniam maxime, autem ipsa eius in explicabo atque ipsum illum laboriosam? Deleniti eaque distinctio doloribus in maxime animi quibusdam corporis quasi. Dolorem ex saepe doloremque, quo corrupti nulla explicabo corporis, velit magnam facere vero quia quam quidem in totam, tempore iure dolores consequuntur tenetur consectetur. Delectus neque ducimus, ullam ratione, explicabo veritatis illo ad quam incidunt nostrum culpa similique voluptatem velit, eos error corporis. Laboriosam perspiciatis molestias, nesciunt cumque qui repellendus velit perferendis, quaerat enim blanditiis ipsa sequi consequuntur omnis iusto doloribus tenetur fuga modi accusamus. Autem, commodi fuga provident illum totam modi est! Maiores numquam consequuntur id impedit ipsum voluptate obcaecati ex enim possimus voluptatibus voluptates voluptatum earum eligendi laudantium, sint maxime in. Nemo similique illum quae ut aut nisi distinctio natus ad? Maiores, error architecto.</p>
       </div>
       <form action="submit">
         <label for="textBox" hidden>Poet Name</label>
@@ -68,7 +69,7 @@
       </div>
     </section>
 
-    <section class="endPage">
+    <section class="endPage" id="endPage">
       <h2>Poetry Trivia</h2>
       <div>
         <h3 class="finalScore"></h3>
