worked on js for easy mode

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
       <div class="poetContainer">
       </div>
       
+      <div>
       <ul class="poemTitleContainer">
-       
       </ul>
+
       <div class="resultContainer">
         <div class="checkOrX"></div>
         <div class="currentScore"></div>
       </div>
+    </div>
+    <button class="next">Next Question</button>
     </section>
 
     <section class="hardGame" id="hardGame">
