--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/c801010e11.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Poetry Trivia</title>
   </head>
@@ -39,7 +40,8 @@
         <ul class="poemTitleContainer">
         </ul>
         <div class="resultContainer">
-          <div class="checkOrX"></div>
+          <!-- <div class="checkOrX">
+          </div> -->
           <div class="currentScore"></div>
         </div>
       </div>
