added page navigation to endpage to finish the quiz

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2>Poetry Trivia</h2>
       <div>
         <h3 class="finalScore"></h3>
-        <p class="userMessage"></p>
+        <p>Congratulations on finishing the quiz!</p>
         <a href="#landingPage">Restart</a>
       </div>
     </section>
