began js for hard mode

--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/c801010e11.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/styles.css">
+    <script
+      src="https://kit.fontawesome.com/c801010e11.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Poetry Trivia</title>
   </head>
 
   <body>
-    <section class="landingPage" id="landingPage">
+    <section class="landingPage wrapper" id="landingPage">
       <h1>Poetry Trivia</h1>
       <ul class="modeContainer">
         <li class="easyMode modes" id="easy">
@@ -27,38 +36,33 @@
             title displayed.
           </p>
         </li>
-
       </ul>
       <a class="button start">Start</a>
     </section>
 
-    <section class="easyGame" id="easyGame">
+    <section class="easyGame wrapper" id="easyGame">
       <h2>Poetry Trivia</h2>
-      <div class="poetContainer">
-      </div>
+      <div class="poetContainer"></div>
       <div>
-        <ul class="poemTitleContainer">
-        </ul>
+        <ul class="poemTitleContainer"></ul>
         <div class="resultContainer">
           <!-- <div class="checkOrX">
           </div> -->
           <div class="currentScore"></div>
         </div>
       </div>
-      <button class="next">Next </button>
-      <button class="skip">Skip </button>
+      <button class="next">Next</button>
+      <button class="skip">Skip</button>
       <a href="#endPage" class="button finish hidden">Finish Quiz</a>
     </section>
 
-    <section class="hardGame" id="hardGame">
+    <section class="hardGame wrapper" id="hardGame">
       <h2>Poetry Trivia</h2>
-      <div class="titleContainer">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae minus corporis suscipit pariatur quia quod aut et laboriosam unde! Distinctio mollitia veniam corrupti dolores nesciunt eos a ipsam dolor impedit, modi quidem deserunt incidunt voluptatibus voluptates consectetur eius esse possimus ex minima amet sed itaque. Odit blanditiis sequi eveniet magnam sit fugiat ducimus, fugit harum nisi, voluptates illum eligendi, totam quae veritatis amet saepe id. Quaerat officia maiores saepe aliquid assumenda, tempora libero animi excepturi sunt recusandae, optio error deleniti beatae repellendus quo dolorum explicabo temporibus veritatis vero expedita rem! Quis temporibus ullam aspernatur magnam aliquam, similique sit minima dignissimos harum tempora ea incidunt reiciendis dolores libero eius, enim, architecto culpa dolor necessitatibus nemo natus debitis omnis rem molestias. Adipisci dignissimos perferendis quaerat rerum sint quos expedita nulla. Repellendus tenetur tempore in reiciendis voluptatibus voluptas natus repellat sit vitae mollitia ratione adipisci, esse aut eius excepturi quisquam? Ad quisquam, tempore voluptatum asperiores accusantium velit veritatis, modi illo itaque nulla cumque laudantium facere possimus natus. Laboriosam voluptas dolore quae enim. Ipsa, laboriosam quas? Officiis culpa tempora nemo vero deserunt sapiente similique soluta dolor enim quibusdam eum quod, dolorem molestias quis. Sit nisi vel aperiam, dolor fugiat aliquid dolorem! Pariatur ullam eos doloribus, saepe magnam tenetur minima laudantium, dicta ut, hic rem numquam exercitationem amet ex accusantium culpa fuga delectus necessitatibus id dolor in suscipit placeat officia quo. Laudantium, ducimus laborum. Eveniet, unde. Officia error iste delectus earum modi. Maiores quaerat expedita minus ducimus amet ab odit quos magni blanditiis quas iste excepturi dolor tempore natus enim, mollitia asperiores quis, necessitatibus repudiandae cupiditate fugiat corrupti. Corporis officia accusamus suscipit harum! Velit, itaque! Optio vel itaque reiciendis recusandae, voluptatem laboriosam tempore odio dignissimos! Cupiditate deserunt impedit dolor eaque porro tenetur et id sapiente, nisi natus molestiae neque dolorem fuga ab aliquid odio autem! Illum suscipit quod ab eveniet enim minus odit sequi fuga et sed, voluptatum ut est accusamus natus doloribus cum maxime dolorem ex? Error dolore illum corporis laudantium magnam fugiat tempora aspernatur facere eos corrupti. Facere porro libero perferendis praesentium ab perspiciatis nisi odio aut labore corrupti, obcaecati omnis fuga earum rerum ipsa aperiam nam repellendus voluptates? Odio, eligendi hic velit ducimus delectus aut atque vel beatae explicabo. Obcaecati velit nam voluptatem! Ipsam cum, veniam maxime, autem ipsa eius in explicabo atque ipsum illum laboriosam? Deleniti eaque distinctio doloribus in maxime animi quibusdam corporis quasi. Dolorem ex saepe doloremque, quo corrupti nulla explicabo corporis, velit magnam facere vero quia quam quidem in totam, tempore iure dolores consequuntur tenetur consectetur. Delectus neque ducimus, ullam ratione, explicabo veritatis illo ad quam incidunt nostrum culpa similique voluptatem velit, eos error corporis. Laboriosam perspiciatis molestias, nesciunt cumque qui repellendus velit perferendis, quaerat enim blanditiis ipsa sequi consequuntur omnis iusto doloribus tenetur fuga modi accusamus. Autem, commodi fuga provident illum totam modi est! Maiores numquam consequuntur id impedit ipsum voluptate obcaecati ex enim possimus voluptatibus voluptates voluptatum earum eligendi laudantium, sint maxime in. Nemo similique illum quae ut aut nisi distinctio natus ad? Maiores, error architecto.</p>
-      </div>
+      <div class="titleContainer"></div>
       <form action="submit">
         <label for="textBox" hidden>Poet Name</label>
         <input
-         required
+          required
           type="text"
           placeholder="insert poet name here"
           class="textBox"
@@ -73,7 +77,7 @@
       </div>
     </section>
 
-    <section class="endPage" id="endPage">
+    <section class="endPage wrapper" id="endPage">
       <h2>Poetry Trivia</h2>
       <div>
         <h3 class="finalScore"></h3>
