--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <button class="next">Next</button>
-      <button class="skip">Skip</button>
+      
       <a href="#endPage" class="button finish hidden">Finish Quiz</a>
     </section>
 
@@ -71,10 +71,12 @@
         />
         <button type="submit" class="submit">Submit</button>
       </form>
+      <button class="nextHard">Next</button>
       <div class="resultContainer">
         <div class="checkOrX"></div>
-        <div class="currentScore"></div>
+        <div class="currentScoreHard"></div>
       </div>
+<a href="#endPage" class="button finish hidden">Finish Quiz</a>
     </section>
 
     <section class="endPage wrapper" id="endPage">
