worked on hard mode functions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="checkOrX"></div>
         <div class="currentScoreHard"></div>
       </div>
-<a href="#endPage" class="button finish hidden">Finish Quiz</a>
+      <a href="#endPage" class="button finishHard hidden">Finish Quiz</a>
     </section>
 
     <section class="endPage wrapper" id="endPage">
