finalized js functions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      
     </section>
 
-    <section class="easyGame wrapper" id="easyGame">
+    <section class="easyGame wrapper invisible" id="easyGame">
       <h2>Poetry Trivia</h2>
       <p></p>
       <div class="poetContainer"></div>
@@ -72,7 +72,7 @@
       <a href="#endPage" class="button finish hidden">Finish Quiz</a>
     </section>
 
-    <section class="hardGame wrapper" id="hardGame">
+    <section class="hardGame wrapper invisible" id="hardGame">
       <h2>Poetry Trivia</h2>
       
       <div class="titleContainer"></div>
@@ -86,7 +86,7 @@
           name="textBox"
           id="textBox"
         />
-        <button type="submit" class="submit">Submit</button>
+        <button type="submit" class="submit hardSubmit">Submit</button>
       </form>
       <button class="nextHard">Next</button>
       <div class="resultContainer">
@@ -96,7 +96,7 @@
       <a href="#endPage" class="button finishHard hidden">Finish Quiz</a>
     </section>
 
-    <section class="endPage wrapper" id="endPage">
+    <section class="endPage wrapper invisible" id="endPage">
       <h2>Poetry Trivia</h2>
       <div>
         <h3 class="finalScore"></h3>
