added invisible classes to easy and hard more

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <section class="landingPage wrapper invisible" id="landingPage">
+    <section class="landingPage wrapper" id="landingPage">
       <h1>Poetry Trivia</h1> 
       <div class="imgContainer">
         <img src="./assets/abstract-ga00742724_1280.png" alt="graphic of feather pen in ink"></div>
@@ -69,7 +69,7 @@
       <button class="finish hidden">Finish Quiz</button>
     </section>
 
-    <section class="hardGame wrapper" id="hardGame">
+    <section class="hardGame wrapper invisible" id="hardGame">
       <h2><span class="underline">Poe</span>try Trivia <i class="fa-solid fa-feather-pointed"></i></h2>
       
       <div class="titleContainer"></div>
