--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
   <body>
     <header>
-      <h1>Poetry Trivia </h1>
-      <img class="logo" src="./assets/abstract-ga00742724_1280.png" alt="graphic of feather pen in ink">
+      <h1>Poetry Trivia <i class="fa-sharp fa-solid fa-feather-pointed"></i> </h1>
     </header>
     <div class = "stackTop loading">
       <i class="fa-sharp fa-solid fa-feather-pointed fa-xl loadingIcon"></i>
