added media queries to hard mode and end page

--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
 
     <section class="endPage wrapper invisible" id="endPage">
       <div class="finalContent">
+        <div class="contentContainer">
         <h3 class="finalScore"></h3>
         <p>Congratulations on finishing the quiz!</p>
         <button class="restart">Restart</button>
+      </div>
       </div>
     </section> <!-- .endPage-->
 
