added instructions to landing page and completed media queries

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
     </div>
 
     <section class="landingPage wrapper invisible" id="landingPage">
+
+
+      <!-- <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>John Doe</h1>
+            <p>Architect & Engineer</p>
+            <p>We love that guy</p>
+          </div>
+        </div>
+      </div> -->
+
       <form class="modeSelection">
         <fieldset>
           <legend>Select your difficulty level</legend>
@@ -36,6 +51,14 @@
             <input class="modeInputs" type="radio" name="gameMode" id="hard" value="hard">
             <label class="hardBox" for="hard">Hard Mode</label>
           </div> <!-- .modes-->
+          <div class="instructions">
+            <div class="instructionsEasy">
+            <p> <span>Easy Mode:</span> Match the poem to the author using the options on screen. Earn a point for each correct answer.</p> 
+          </div>
+          <div class="instructionsHard">
+            <p><span>Hard Mode:</span> Guess the author of the poem on screen. Earn a point for each correct answer.</p>
+          </div>
+          </div>
           <button type="submit" class="startButton">Start</button>
         </fieldset>
       </form> <!-- .modeSelection-->
